<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_attribution"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="csci4020.shawnbickel_judsonthomas.final_project.bickel_thomas_tetris.AttributionActivity"
    android:background="#002E63">

    <TextView
        android:text="Attribution and App Information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/textView7"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="24sp" />

    <TextView
        android:text="Open Source Images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:id="@+id/textView8"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/splashScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SplashScreenTextView"
        android:textColor="#ffffff"
        android:clickable="true"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp" />

    <TextView
        android:text="@string/Shawn_Bickel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center"
        android:id="@+id/ShawnBickelRepo"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:paddingTop="5dp"
        android:layout_below="@+id/JudsonThomasRepo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/Judson_Thomas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/JudsonThomasRepo"
        android:clickable="true"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:layout_below="@+id/textView12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/t_Tetris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/T_image"
        android:textColor="#ffffff"
        android:layout_below="@+id/Z_Image"
        android:layout_alignLeft="@+id/L_image"
        android:layout_alignStart="@+id/L_image" />

    <TextView
        android:text="@string/l_Tetris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/L_image"
        android:textColor="#ffffff"
        android:layout_below="@+id/SplashScreenTextView"
        android:layout_alignLeft="@+id/SplashScreenTextView"
        android:layout_alignStart="@+id/SplashScreenTextView" />

    <TextView
        android:text="@string/pause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/pause_button"
        android:textColor="#ffffff"
        android:layout_below="@+id/play_button"
        android:layout_alignLeft="@+id/play_button"
        android:layout_alignStart="@+id/play_button" />

    <TextView
        android:text="@string/z_Tetris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Z_Image"
        android:textColor="#ffffff"
        android:layout_below="@+id/L_image"
        android:layout_alignRight="@+id/L_image"
        android:layout_alignEnd="@+id/L_image" />

    <TextView
        android:text="@string/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/play_button"
        android:textColor="#ffffff"
        android:layout_below="@+id/Square_Image"
        android:layout_alignRight="@+id/Square_Image"
        android:layout_alignEnd="@+id/Square_Image" />

    <TextView
        android:text="@string/straight_Tetris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:clickable="true"
        android:id="@+id/StraightLine_Image"
        android:layout_below="@+id/pause_button"
        android:layout_alignLeft="@+id/pause_button"
        android:layout_alignStart="@+id/pause_button" />

    <TextView
        android:text="@string/squareTetris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Square_Image"
        android:textColor="#ffffff"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/T_image"
        android:layout_alignLeft="@+id/Z_Image"
        android:layout_alignStart="@+id/Z_Image" />

    <TextView
        android:text="Developers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:paddingTop="20dp"
        android:layout_marginTop="56dp"
        android:paddingBottom="10dp"
        android:layout_below="@+id/StraightLine_Image"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

